--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#282a36">
 		<title>{{ user.username }} - Subscription</title>
-		<link href="https://raw.githubusercontent.com/dstreletskiy/marzban-sub-page/refs/heads/main/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-		<link href="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
-		<link href="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+		<link href="https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+		<link href="https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+		<link href="https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
 		<link rel="stylesheet" id="dynamic-stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" crossorigin="anonymous" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
@@ -190,7 +190,7 @@
 			[data-bs-theme='dark'] {
 				--bs-body-bg: #151515;
 				--bs-secondary-bg: #232323;
-				--bs-secondary-rgb: 53, 56, 75;
+				--bs-secondary-rgb: 35, 35, 35;
 				--bs-my-btn-bg: #2383e2;
 				--bs-my-btn-bg-rgb: 35, 131, 226;
 				--bs-my-btn-accent-bg-rgb: 78, 78, 78;
@@ -267,7 +267,7 @@
 			
 			<!-- Logo, support and language switcher -->
 			<header class="d-flex flex-wrap align-items-center gap-2 mb-5 justify-content-between">
-				<img src="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/logo.png" alt="Logo" width="32" height="32">
+				<img src="https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/logo.png" alt="Logo" width="32" height="32">
 				<ul class="nav align-items-center">
 					<li class="nav-item"><a class="nav-link my-nav-link fw-semibold px-2" id="href-donate" rel="noopener noreferrer" target="_blank" x-text="$t('donate')"></a></li>
 					<li class="nav-item"><a class="nav-link my-nav-link fw-semibold px-2" id="href-support" rel="noopener noreferrer" target="_blank" x-text="$t('support')"></a></li>
@@ -748,12 +748,12 @@
 			// Tutorial images links
 			const images = {
 				en: {
-					imgV2rayNg1: "https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/v2rayNg-en-1.png",
-					imgV2rayNg2: "https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/v2rayNg-en-2.png",
+					imgV2rayNg1: "https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/v2rayNg-en-1.png",
+					imgV2rayNg2: "https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/v2rayNg-en-2.png",
 				},
 				ru: {
-					imgV2rayNg1: "https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/v2rayNg-ru-1.png",
-					imgV2rayNg2: "https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/v2rayNg-ru-2.png",
+					imgV2rayNg1: "https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/v2rayNg-ru-1.png",
+					imgV2rayNg2: "https://raw.githubusercontent.com/persizer/marzban-sub-page/refs/heads/main/img/v2rayNg-ru-2.png",
 				}
 			};
 						
@@ -1196,7 +1196,7 @@
 					width: 256	,
 					height: 256,
 					colorDark: "#fff",
-					colorLight: "#35384b",
+					colorLight: "#232323",
 					correctLevel: QRCode.CorrectLevel.H
 				});
 				
