add v2raytun for android

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				document.getElementById("href-ios-happ").href = `happ://add/${linkFull}`;
 				document.getElementById("href-android-hiddify").href = `hiddify://import/${linkFull}`;
 				document.getElementById("href-android-v2rayng").href = `v2rayng://install-config?url=${linkFull}&name=` + serviceName;
+				document.getElementById("href-android-v2raytun").href = `v2raytun://import/${linkFull}#` + serviceName;
 				document.getElementById("href-android-cmfa").href = `clash://install-config?url${linkFull}&name=` + serviceName;
 				document.getElementById("href-android-singbox").href = `sing-box://import-remote-profile?url=${linkFull}#` + serviceName;
 				document.getElementById("href-android-happ").href = `happ://add/${linkFull}`;
@@ -739,6 +740,31 @@
 																<img id="imgV2rayNg2"src="" width="100%" class="rounded img-fluid">
 															</div>
 														</div>
+													</div>
+												</div>
+											</div>
+											<hr class="m-0">
+											<div class="accordion-item">
+												<h2 class="accordion-header">
+												<button class="accordion-button collapsed fs-5 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOsAndroidV2raytun" aria-expanded="false" aria-controls="collapseOsAndroidV2raytun">
+														<svg class="my-icon"><use href="#v2box"></use></svg>
+														<span class="d-block w-100 text-center">
+															V2RayTun
+														</span>
+													</button>
+												</h2>
+												<div id="collapseOsAndroidV2raytun" class="accordion-collapse collapse" data-bs-parent="#accordionOsAndroidAltList">
+													<div class="container pb-4">
+														<p class="fs-5 fw-bold">1. <span x-text="$t('getApp')"></span></p>
+														<p x-text="$t('getAppDescription')"></p>
+														<a href="https://play.google.com/store/apps/details?id=com.v2raytun.android">
+															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('downloadApp')"></button>
+														</a>
+														<p class="fs-5 fw-bold mt-4">2. <span x-text="$t('addConfig')"></span></p>
+														<p x-text="$t('addConfigDescription')"></p>
+														<a id="href-android-v2raytun">
+															<button type="button" class="btn my-btn my-btn-accent w-100" x-text="$t('addConfigApp')"></button>
+														</a>
 													</div>
 												</div>
 											</div>
