--- a/marzneshin/index.html
+++ b/marzneshin/index.html
@@ -8,7 +8,7 @@
 		<link href="https://raw.githubusercontent.com/dstreletskiy/marzban-sub-page/refs/heads/main/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
 		<link href="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 		<link href="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
-		<link rel="stylesheet" id="dynamic-stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" crossorigin="anonymous" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH">
+		<link rel="stylesheet" id="dynamic-stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
 		<script>
@@ -1717,29 +1717,25 @@
 				if (['ar', 'he', 'fa'].includes(language)) {
 					html.setAttribute('dir', 'rtl');
 					switchStylesheet(
-						'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css', // Path to RTL CSS
-						'sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb'
+						'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css'
 					);
 				} else {
 					html.setAttribute('dir', 'ltr');
 					switchStylesheet(
-						'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css', // Path to LTR CSS
-						'sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH'
+						'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css'
 					);
 				}
 			}
 			
-			function switchStylesheet(newStylesheetHref, newIntegrity) {
+			function switchStylesheet(newStylesheetHref) {
 				const existingLink = document.getElementById('dynamic-stylesheet');
 				if (existingLink) {
 					existingLink.href = newStylesheetHref;
-					existingLink.setAttribute('integrity', newIntegrity);
 				} else {
 					const link = document.createElement('link');
 					link.rel = 'stylesheet';
 					link.id = 'dynamic-stylesheet';
 					link.href = newStylesheetHref;
-					link.integrity = newIntegrity;
 					link.crossOrigin = 'anonymous';
 					document.head.appendChild(link);
 				}
